smartemission/services/sos52n/deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: sos52n-deployment
  namespace: smartemission
  labels:
    app: sos52n
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sos52n
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: sos52n
    spec:
      containers:
      - name: sos52n
        image: smartemission/se-sos52n:4.3.7-6
        livenessProbe:
          httpGet:
            path: /sos52n?service=SOS&request=GetCapabilities
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /sos52n?service=SOS&request=GetCapabilities
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "500m"
            memory: "4.0Gi"
          requests:
            cpu: "500m"
            memory: "2.0Gi"
        ports:
        - containerPort: 8080
