smartemission/services/sos52n/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sos52n
  namespace: smartemission
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/52n-sos-webapp"
spec:
  rules:
  - host: pdok.smartemission.nl
    http:
      paths:
      - path: /sos52n
        backend:
          serviceName: sos52n-service
          servicePort: 8080
      - path: /52n-sos-webapp
        backend:
          serviceName: sos52n-service
          servicePort: 8080
